--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "textlint": "^11.9.0",
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-no-todo": "^2.0.1",
+    "textlint-rule-prefer-tari-tari": "^1.0.3",
     "textlint-rule-preset-ja-technical-writing": "^7.0.0"
   }
 }
