--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@textlint/website-generator": "^0.10.4"
   },
   "dependencies": {
+    "@textlint-ja/textlint-rule-no-insert-dropping-sa": "^2.0.1",
     "textlint": "^11.9.0",
     "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-no-todo": "^2.0.1",
